[gd_scene load_steps=9 format=3 uid="uid://cf7ks7a7k1o1i"]

[ext_resource type="PackedScene" uid="uid://bnc8yuow6e3v5" path="res://scenes/player/player.tscn" id="1_qses7"]
[ext_resource type="Script" path="res://scenes/Game.gd" id="1_uq5qs"]
[ext_resource type="Script" path="res://scenes/Camera.gd" id="3_yodg6"]
[ext_resource type="AudioStream" uid="uid://clgewmskjbns1" path="res://assets/music/ld56.wav" id="5_2kou7"]
[ext_resource type="PackedScene" uid="uid://dd7aot2e2igcg" path="res://scenes/scenery/grass.tscn" id="5_gi1mx"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_cyln4"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_o4ynm"]
sky_material = SubResource("ProceduralSkyMaterial_cyln4")

[sub_resource type="Environment" id="Environment_2nu1w"]
background_mode = 2
sky = SubResource("Sky_o4ynm")
tonemap_mode = 2
glow_enabled = true

[node name="Game" type="Node3D"]
script = ExtResource("1_uq5qs")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2nu1w")

[node name="Player" parent="." instance=ExtResource("1_qses7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Creatures" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 20, 10)
script = ExtResource("3_yodg6")

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -448.0
offset_bottom = 31.0
grow_horizontal = 0

[node name="NetButton" type="Button" parent="Control2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Bigger Net"

[node name="SpeedButton" type="Button" parent="Control2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "buy speed"

[node name="SpawnButton" type="Button" parent="Control2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "More Creatures"

[node name="BetterCreaturesButton" type="Button" parent="Control2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Better Creature"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MoneyLabel" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 249.0
offset_bottom = 74.0
theme_override_colors/default_color = Color(0, 0.768627, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 12
theme_override_font_sizes/normal_font_size = 40
text = "ðŸ’²0"

[node name="Grass" type="Node3D" parent="."]

[node name="Grass" parent="Grass" instance=ExtResource("5_gi1mx")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_2kou7")
volume_db = -6.559
